--- a/nieruchomości/Views/Admin/AddSetting.cshtml
+++ b/nieruchomości/Views/Admin/AddSetting.cshtml
@@ -15,11 +15,11 @@
             @Html.AntiForgeryToken()
 
             <div class="form-horizontal">
-                <h4>Clat</h4>
+                <h4>Dodaj przedział taksy notarialnej</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(model => model.From, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.Label("Od", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.From, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.From, "", new { @class = "text-danger" })
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.To, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.Label("Do", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.To, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.To, "", new { @class = "text-danger" })
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Percent, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.Label("Procent", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.Percent, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Percent, "", new { @class = "text-danger" })
@@ -43,7 +43,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Max, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.Label("Maksymalnie", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.Max, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Max, "", new { @class = "text-danger" })
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.Label("Kwota", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
@@ -61,14 +61,14 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-default" />
+                        <input type="submit" value="Utwórz" class="btn btn-default" />
                     </div>
                 </div>
             </div>
         }
 
         <div>
-            @Html.ActionLink("Back to List", "Settings")
+            @Html.ActionLink("Powrót", "Settings")
         </div>
     </div>
 </div>
