--- a/nieruchomości/Views/Shared/_Layout.cshtml
+++ b/nieruchomości/Views/Shared/_Layout.cshtml
@@ -153,8 +153,8 @@
         $(".carousel").carousel();
     </script>
     
-    @Scripts.Render("~/bundles/jquery", "~/bundles/bootstrap", "~/bundles/site")
-    @RenderSection("scripts", required: false)
+ @*   @Scripts.Render("~/bundles/jquery", "~/bundles/bootstrap", "~/bundles/site")
+    @RenderSection("scripts", required: false)*@
 
 </body>
 </html>
