--- a/nieruchomości/Views/Admin/Workers.cshtml
+++ b/nieruchomości/Views/Admin/Workers.cshtml
@@ -43,7 +43,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var item in Model.OrderByDescending(x => x.CreatedAt))
+                @foreach (var item in Model)
                 {
                     <tr>
                         <td>
