--- a/nieruchomości/Views/Admin/Workers.cshtml
+++ b/nieruchomości/Views/Admin/Workers.cshtml
@@ -59,9 +59,15 @@
                             @item.CreatedAt.ToShortDateString()
                         </td>
                         <td style="text-align: center">
-                            @Html.ActionLink("Pokaż", "Worker", new { id = item.Id }, new { @class = "btn btn-info btn-xs" })
-                            @Html.ActionLink("Edytuj", "EditWorker", new {id = item.Id}, new {@class = "btn btn-success btn-xs"})
-                            @Html.ActionLink("Usuń", "DeleteWorker", new { id = item.Id}, new { @class = "btn btn-primary btn-xs", @onclick = "return confirm('Na pewno usunąć tego pracownika?');" })
+                            <a class="btn btn-success btn-xs" href="/Admin/Worker?id=@item.Id">
+                                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                            </a>
+                            <a class="btn btn-default btn-xs" href="/Admin/EditWorker?id=@item.Id">
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                            </a>
+                            <a class="btn btn-danger btn-xs" href="/Admin/DeleteWorker?id=@item.Id" onclick="return confirm('Na pewno usunąć tego pracownika?');">
+                                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                            </a>
                         </td>
                     </tr>
                 }
