--- a/nieruchomości/Views/Admin/AdList.cshtml
+++ b/nieruchomości/Views/Admin/AdList.cshtml
@@ -145,7 +145,7 @@
                             <tr>
                                 <th style="width: 12%">
                                     <button type="submit" class="btn btn-primary btn-xs" style="width: 100%" id="submit">Wykonaj</button>
-                                    @if (HttpContext.Current.Request.Params.Get("hidden") == "True")
+                                    @if (HttpContext.Current.Request.Params.Get("showHidden") == "true")
                                     {
                                         <label style="font-size: 11px; font-weight: bold; margin-bottom: 0"><input type="radio" checked name="action" value="true" /> Pokaż</label>
                                     }
@@ -203,6 +203,19 @@
                 }
                 <small>Strona @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) z @Model.PageCount</small>
                 <div style="text-align:center">@Html.PagedListPager(Model, page => Url.Action("AdList", new { page, changed = ViewBag.changed, hide = ViewBag.hide, hidden = ViewBag.hidden, search = ViewBag.Search, key = ViewBag.key, worker = ViewBag.worker, showHidden = ViewBag.showHidden, dateFrom = ViewBag.dateFrom, dateTo = ViewBag.dateTo, type = ViewBag.type }))</div>
+            </div>
+        </div>
+        <h4>Legenda</h4>
+        <div clas="row">
+            <div class="col-md-12" style="font-size: small">
+                <span class="btn btn-success btn-xs disabled" style="opacity: 1; width:80px">
+                    <span class="glyphicon glyphicon-search"></span>
+                    Podgląd
+                </span>
+                <span class="btn btn-default btn-xs disabled" style="opacity: 1; width:80px">
+                    <span class="glyphicon glyphicon-search"></span>
+                    Edytuj
+                </span>
             </div>
         </div>
     </div>
