--- a/nieruchomości/Views/Admin/Messages.cshtml
+++ b/nieruchomości/Views/Admin/Messages.cshtml
@@ -62,5 +62,18 @@
                 <div style="text-align:center">@Html.PagedListPager(Model, page => Url.Action("Messages", new { page }))</div>
             </div>
         </div>
+        <h4>Legenda</h4>
+        <div clas="row">
+            <div class="col-md-12" style="font-size: small">
+                <span class="btn btn-success btn-xs disabled" style="opacity: 1; width:80px">
+                    <span class="glyphicon glyphicon-search"></span>
+                    Podgląd
+                </span>
+                <span class="btn btn-danger btn-xs disabled" style="opacity: 1; width:80px">
+                    <span class="glyphicon glyphicon-trash"></span>
+                    Usuń
+                </span>
+            </div>
+        </div>
     </div>
 </div>
