--- a/nieruchomości/Views/Admin/Workers.cshtml
+++ b/nieruchomości/Views/Admin/Workers.cshtml
@@ -75,5 +75,20 @@
         </table>
         <small>Strona @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) z @Model.PageCount</small>
         <div style="text-align:center">@Html.PagedListPager(Model, page => Url.Action("Workers", new { page }))</div>
+    
+        <div clas="row">
+            <div class="col-md-12" style="font-size: small">
+                <span class="btn btn-success btn-xs disabled" style="opacity: 1; width:80px">
+                    <span class="glyphicon glyphicon-search"></span>
+                    Podgląd
+                </span>
+                <span class="btn btn-default btn-xs disabled" style="opacity: 1; width:80px">
+                    <span class="glyphicon glyphicon-search"></span>
+                    Edytuj
+                </span>
+            </div>
         </div>
+    </div>
+    
+
 </div>
